VFS-11312 Fix showing jump to file input

--- a/src/app/styles/components/file-browser/fb-table.scss
+++ b/src/app/styles/components/file-browser/fb-table.scss
@@ -175,6 +175,9 @@
     // enables text truncate inside
     max-width: 0;
   }
+  .columns-configuration-cell {
+    width: 40px;
+  }
   .fb-table-col-actions-menu {
     width: 40px;
   }
